<resources>
    <!--    common-->
    <string name="app_name">易ID</string>
    <string name="qr_name">EASY_ID.png</string>
    <string name="create_account">创建账号</string>
    <string name="sure">确定</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="my">我的</string>
    <string name="tip">提示</string>
    <string name="request_write_external_permission">获取相册读写权限</string>
    <string name="request_wlocation_permission">获取定位权限</string>
    <string name="password_different">两次密码不一致</string>
    <string name="import_id">导入身份证</string>
    <string name="import_album">相册</string>
    <string name="import_apply_album_permission">申请读取相册权限</string>
    <string name="import_apply_camera_permission">申请使用相机权限</string>
    <string name="import_qr_error">身份证二维码不正确</string>
    <string name="open_error">开启失败</string>
    <string name="fingerprint_recognition_title">指纹识别</string>
    <string name="fingerprint_recognition_subtitle">请手指放入指纹识别处</string>
    <string name="fingerprint_recognition_use_password">使用密码</string>
    <string name="qr_error">请扫描正确二维码</string>
    <string name="verify_success">校验成功</string>
    <string name="verify_error">校验失败</string>
    <string name="verify_user_not_found">用户未找到</string>
    <string name="verify_exception">验证异常</string>
    <string name="network_error">网络请求失败!</string>
    <string name="no_account"> 当前网站没有匹配到账号信息!</string>

    <!--    home-->
    <string name="main_home">首页</string>
    <string name="main_my">我的</string>
    <string name="main_id_card">身份证号:</string>
    <string name="main_id_card_qr">身份证二维码</string>
    <string name="main_click_exit_application">再次点击退出应用</string>
    <!--    guide-->
    <string name="guide_import_account">导入账号</string>
    <string name="guide_dialog_title">选择导入方式</string>
    <string name="guide_import_album">相册</string>
    <string name="guide_import_camera">扫描二维码</string>

    <!--    create_account-->
    <string name="create_account_title">创建身份</string>
    <string name="create_account_input_password">请输入密码</string>
    <string name="create_account_input_password_again">请再次输入密码</string>

    <!--    update password-->
    <string name="update_password_input_old_password">输入旧密码</string>
    <string name="update_password_input_new_password">输入新密码</string>
    <string name="update_password_input_confirm_password">再次输入新密码</string>

    <!--    authorization-->
    <string name="authorization_address">被授权人地址</string>
    <string name="authorization_service_title">可服务列表</string>
    <string name="authorization_add">添加</string>

    <!--    id_card-->
    <string name="id_card_title">身份证号</string>
    <string name="id_card_share">复制</string>
    <string name="id_card_save">保存</string>
    <string name="id_card_copy_success">复制成功</string>
    <string name="id_card_load_error">加载身份信息失败</string>

    <!--    id_card_manager-->
    <string name="id_card_manager_new">新建身份证</string>
    <string name="id_card_manager_import">导入身份证QR</string>
    <string name="id_card_manager_export">导出身份证QR</string>
    <string name="id_card_manager_update_password">修改密码</string>
    <string name="id_card_manager_show">查看身份文件</string>


    <!--    my-->
    <string name="my_name">姓名：</string>
    <string name="my_id_card">身份证号：</string>
    <string name="my_authorization">授权他人</string>
    <string name="my_status">状态</string>
    <string name="my_not_certified">未认证</string>
    <string name="my_certified">已认证</string>
    <string name="my_identity_management">身份管理</string>
    <string name="my_authorization_management">已授权系统</string>
    <string name="my_no_secret">免密</string>
    <string name="my_fingerprint">指纹识别</string>
    <string name="my_face_id">Face ID</string>
    <string name="my_customer_service">客服</string>
    <string name="my_feed_back">意见反馈</string>
    <string name="my_about">关于我们</string>
    <string name="my_help">帮助</string>
    <string name="my_no_support_fingerprint">当前手机不支持指纹识别</string>
    <string name="my_no_fingerprint">你尚未录入指纹，请先在手机系统中录入指纹，再返回本页面开启指纹解锁</string>
    <string name="my_input">去录入</string>

    <!--    save_account-->
    <string name="save_account_des">删除APP\n无密码\n与比特币钱包一致\n丢失将无法找回</string>
    <string name="save_account">备份到相册</string>
    <string name="save_account_skip">跳过</string>
    <string name="save_account_line">-</string>
    <string name="save_account_success">保存成功</string>
    <string name="save_account_failure">保存失败</string>
    <!--    home-->
    <string name="home_service">便民服务</string>
    <string name="home_notice">公告</string>
    <string name="home_registered">挂号预约</string>
    <string name="home_hotel">酒店预约</string>
    <string name="home_lock_title">点击解锁二维码</string>
    <string name="home_lock_des">身份证二维码被锁定请输入密码解锁</string>
    <string name="home_location">正在定位…</string>

    <string name="create_account_tip">提示：\n易ID身份系统，创建时无需网络无需验证，\n无密码找回功能</string>
    <string name="import_success">身份证导入成功</string>
    <string name="export_success">身份证导出成功</string>
    <string name="home_unlock">解锁</string>

    <!--    Splash-->
    <string name="splash_load_error">获取身份失败</string>
    <string name="home_no_location">手机定位服务未开启，无法获取到您的准确位置信息，是否前往开启？</string>

    <string name="home_go_open">去开启</string>
    <string name="developing">开发中...</string>

    <string name="privacy_policy_title"><u>服务协议和隐私政策</u></string>
    <string name="use_agreement_privacy_authority">我已认真阅读并同意《服务协议》和《隐私政策》</string>
    <string name="read_privacy_authority">请阅读服务协议和隐私政策并选中</string>
    <string name="dialog_service_and_privacy_policy_content">请您务必审慎阅读，充分理解\"服务协议\"和\"隐私政策\"各条款，包括但不限于：为了可以把账号信息保存到手机存储，我们需要申请读写手机存储权限，扫描账号二维码信息，我们需要申请摄像头权限，您可以在设置中查看、变更、删除个人信息管理你的授权。
您可阅读《服务协议》和《隐私政策》了解详细信息。如您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="not_use">暂不使用</string>
    <string name="agree">同意</string>
    <string name="refuse_location_permission">你拒绝了定位权限，将无法使用部分功能</string>

<!--    authorization manager-->
    <string name="authorization_system_add">添加新系统</string>
    <string name="authorization_system_info">系统信息</string>
    <string name="authorization_system_please_choice_system">请选择授权系统</string>
    <string name="authorization_system_please_input_user_name">请输入用户名</string>
    <string name="authorization_system_please_input_password">请输入密码</string>
    <string name="authorization_system_list">授权系统列表</string>
    <string name="authorization_system_input_account">请输入账号</string>
    <string name="authorization_system_username">用户名</string>
    <string name="authorization_system_password">密码</string>
    <string name="authorization_system_current_account">当前使用</string>
    <string name="authorization_system_delete_account">是否删除账号？</string>

</resources>