<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.didchain.didcard.ui.idmanager.UpdatePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:ignore="Autofill,MissingConstraints">

        <include
            android:id="@+id/titleLayout"
            layout="@layout/title_layout"
            app:viewModel="@{viewModel}" />

        <EditText
            android:id="@+id/oldPassword"
            style="@style/PasswordEditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/update_password_input_old_password"
            android:text="@={viewModel.oldPassword}"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout" />

        <EditText
            android:id="@+id/newPassword"
            style="@style/PasswordEditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/update_password_input_new_password"
            android:text="@={viewModel.newPassword}"
            app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/PasswordEditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/update_password_input_confirm_password"
            android:text="@={viewModel.confirmPassword}"
            app:layout_constraintTop_toBottomOf="@+id/newPassword" />

        <TextView
            android:id="@+id/sure"
            style="@style/YellowButtonStyle"
            onClickCommand="@{viewModel.clickSure}"
            android:layout_marginTop="16dp"
            android:text="@string/sure"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>