<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.didchain.didcard.ui.saveaccount.SaveAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="77dp"
            android:text="@string/tip"
            android:textColor="@color/color_0c123d"
            android:textSize="18sp"
            app:drawableTopCompat="@drawable/tip_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:text="@string/save_account_des"
            android:textColor="@color/color_0c123d"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/save_account_line"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/des"
            app:layout_constraintTop_toBottomOf="@+id/tip" />

        <TextView
            android:id="@+id/saveToAlbum"
            style="@style/YellowButtonStyle"
            onClickCommand="@{viewModel.clickSaveAlbum}"
            android:layout_marginBottom="115dp"
            android:text="@string/save_account"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/skip"
            onClickCommand="@{viewModel.clickSkip}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/save_account_skip"
            android:textColor="@color/color_0c123d"
            android:textSize="16sp"
            app:drawableBottomCompat="@drawable/skip_bottom_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveToAlbum" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>