<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.didchain.didcard.ui.authorizationManager.EditSystemInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/titleLayout"
            layout="@layout/title_layout"
            app:viewModel="@{viewModel}" />

        <EditText
            android:id="@+id/system"
            style="@style/EditTextStyle"
            onClickCommand="@{viewModel.clickChoiceSystem}"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:hint="@string/authorization_system_please_choice_system"
            android:importantForAutofill="no"
            android:inputType="none"
            android:text="@={viewModel.url}"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout"
            tools:ignore="MissingConstraints,TextFields" />

        <ImageView
            onClickCommand="@{viewModel.clickChoiceSystem}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/choice_system"
            app:layout_constraintBottom_toBottomOf="@+id/system"
            app:layout_constraintEnd_toEndOf="@+id/system"
            app:layout_constraintTop_toTopOf="@+id/system"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/userName"
            style="@style/EditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/authorization_system_input_account"
            android:importantForAutofill="no"
            android:text="@={viewModel.userName}"
            app:layout_constraintTop_toBottomOf="@+id/system"
            tools:ignore="MissingConstraints,TextFields" />

        <EditText
            android:id="@+id/password"
            style="@style/PasswordEditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/create_account_input_password"
            android:importantForAutofill="no"
            android:text="@={viewModel.password}"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tools:ignore="MissingConstraints,TextFields" />

        <CheckBox
            onCheckedChangedCommand="@{viewModel.clickShowPassword}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/show_password_selector"
            android:button="@null"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <TextView
            style="@style/YellowButtonStyle"
            onClickCommand="@{viewModel.clickSure}"
            android:layout_marginTop="16dp"
            android:text="@string/sure"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>