<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nbs.didcard.ui.authorization.AuthorizationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <include
            layout="@layout/title_layout"
            app:viewModel="@{viewModel}"
            android:id="@+id/titleLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAddress"
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="22dp"
                android:gravity="center_vertical"
                android:text="@string/authorization_address"
                android:textColor="@color/color_0c123d"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/scan"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_end"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/serviceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="16dp"
            android:text="@string/authorization_service_title"
            android:textColor="@color/color_b5b6ba"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardAddress" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardServiceList"
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_marginTop="9dp"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/serviceTitle">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/serviceList"
                android:layout_width="match_parent"
                android:overScrollMode="never"
                android:layout_marginBottom="@dimen/button_height"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/add"
                style="@style/YellowButtonStyle"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:text="@string/authorization_add" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>